PTR-80: Setup skeleton directory for integration testing